# opengl-3d-dream

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  compile.sh  default_scene.fjwr  imgui.ini  render_test_output.txt  test_cube.fjwr  test_triangle.fjwr
.claude/: settings.local.json
src/: Application.cpp  Application.h  Main.cpp  main.cpp
src/core/: Camera.cpp  Camera.h  CoordinateAxes.cpp  CoordinateAxes.h  Model.cpp  Model.h  Ray.h  RayIntersection.cpp
src/input/: InputHandler.cpp  InputHandler.h
src/math/: MathTest.cpp  Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h
src/rendering/: IRenderer.h  RenderTest.cpp  SoftwareRenderer.cpp  SoftwareRenderer.h
src/test/: GLFWTest.cpp  ModelTest.cpp  Phase5Test.cpp
src/ui/: UI.cpp  UI.h
src/utils/: Utils.cpp  Utils.h
